# SmallHoleFiller

./: .gitmodules  CMakeLists.txt  FillSmallHoles.cpp  FillSmallHolesAllComponents.cpp  FillSmallHolesRGB.cpp  FillSmallHolesScalar.cpp  Helpers.h  Helpers.hpp  Mask.cpp  Mask.h  SmallHoleFiller.cpp  SmallHoleFiller.h  SmallHoleFiller.hpp  SmallHoleFiller.hxx  SmallHoleFillerExample.cpp  SmallHoleFillerMaskFromImage.cpp  SmallHoleFillerWithMaskExample.cpp
Documentation/: .SmallHoleFiller.tex.kate-swp  SmallHoleFiller.aux  SmallHoleFiller.out  SmallHoleFiller.tex  SmallHoleFiller.toc
GUI/: CMakeLists.txt  HelpersQt.h  HelpersQt.hpp  SmallHoleFillerInteractive.cpp  SmallHoleFillerWidget.cpp  SmallHoleFillerWidget.h  SmallHoleFillerWidget.ui
data/: .fuse_hidden0000210d00000001  trashcan_mask.mha
